# Omnishell-V3

./: .env.example  .gitignore  CNAME  LICENSE  README.md  app.py  creative_agent.py  index.html  omnishell.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test_agent.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy-pages.yml
omnishell/: __init__.py  cli.py  core.py  history.py  llm.py  memory.py  prompts.py  safety.py  web.py
omnishell_pkg/: README.md  setup.py
omnishell_pkg/omnishell/: main.py
website/: index.html  script.js  style.css
